--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "homepage": "https://samnoble118.github.io/Pokedex/",
   "dependencies": {
     "cra-template": "1.2.0",
+    "fuse.js": "^7.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-scripts": "5.0.1",
+    "sass": "^1.83.1",
     "web-vitals": "^4.2.4"
   },
   "scripts": {
